--- a/sharkBytes_Free/src/main/res/layout-large/activity_save.xml
+++ b/sharkBytes_Free/src/main/res/layout-large/activity_save.xml
@@ -4,7 +4,7 @@
     android:layout_height="fill_parent"
     android:background="@drawable/greatwhitefin"
     android:orientation="vertical" >
-    
+
     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="fill_parent"
@@ -13,23 +13,11 @@
         android:contentDescription="@string/background"
         android:src="@drawable/greatwhitefin" />
 
-    <LinearLayout
-        android:id="@+id/saveLayout"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:layout_above="@+id/adView" >
-    </LinearLayout>
-    
-    <com.google.android.gms.ads.AdView
-        android:id="@+id/adView"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+    <WebView
+        android:id="@+id/saveWebView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
-        ads:adSize="SMART_BANNER"
-        ads:adUnitId="@string/ad_unit_id"
-        android:background="@color/black_trans" />
+        android:layout_alignParentTop="true" />
 
 </RelativeLayout>
